--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ name = "server"
 path = "src/server.rs"
 
 [dependencies]
+argh = "0.1.13"
 bincode = "2.0.1"
 clap = { version = "4.5.53", features = ["derive"] }
 ctrlc = "3.5.0"
